fixing button breaking across two lines on smaller screens

--- a/styles/artworks.css
+++ b/styles/artworks.css
@@ -259,7 +259,7 @@ label input[type="radio"]:checked ~ span {
 
 #actionLink {
     border: 1px solid var(--dark-primary);
-    padding: 10px;
+    padding: 4%;
 }
 
 #actionLink:hover {
